# text-contextifyer

./: .envrc  .gitignore  Dockerfile  README.md  pyproject.toml
src/text_contextifyer/: __init__.py  cli.py  config.py
src/text_contextifyer/api/: main.py
src/text_contextifyer/core/: __init__.py  matcher.py  ontology_manager.py
src/text_contextifyer/transformers/: __init__.py  markdown_transformer.py
tests/: test_markdown_transformer.py  test_matcher.py
